--- a/00-modulo-01/hello-world/index.html
+++ b/00-modulo-01/hello-world/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Hello World - HTML</h1>
 
     <div id="app1"></div>
@@ -22,46 +21,44 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
 
     <script>
-        // Exemplo de uso do createElement
-        var h1 = React.createElement('h1', null, 'Hello H1 React');
-        ReactDOM.render(h1, document.getElementById('app1'));
+      // Exemplo de uso do createElement
+      var h1 = React.createElement("h1", null, "Hello H1 React");
+      ReactDOM.render(h1, document.getElementById("app1"));
 
-        // Exemplo de componentização
-        var h1_2 = React.createElement('h1', null,
-            React.createElement('span', null, 'Texto do span com React'));
-        ReactDOM.render(h1_2, document.getElementById('app2'));
+      // Exemplo de componentização
+      var h1_2 = React.createElement(
+        "h1",
+        null,
+        React.createElement("span", null, "Texto do span com React")
+      );
+      ReactDOM.render(h1_2, document.getElementById("app2"));
 
-        // Exemplo de uso do React.DOM
-        var h1_3 = React.DOM.h1(null, 'Hello H1 React DOM');
-        ReactDOM.render(h1_3, document.getElementById('app3'));
+      // Exemplo de uso do React.DOM
+      var h1_3 = React.DOM.h1(null, "Hello H1 React DOM");
+      ReactDOM.render(h1_3, document.getElementById("app3"));
     </script>
 
     <script type="text/babel">
-        // Exemplo de uso do ReactDOM com render utilizando o transpilador Babel
-        ReactDOM.render(
-            <h1>Hello World React Render</h1>,
-            document.getElementById('app4')
-        );
+      // Exemplo de uso do ReactDOM com render utilizando o transpilador Babel
+      ReactDOM.render(
+        <h1>Hello World React Render</h1>,
+        document.getElementById("app4")
+      );
     </script>
 
     <script type="text/babel">
-        var Title = React.createClass({
-            render: function () {
-                return (
-                    <div>
-                        <h1>Hello World Title Component</h1>
-                        <span>conteúdo do span</span>
-                    </div>
-                );
-            }
-        });
+      var Title = React.createClass({
+        render: function () {
+          return (
+            <div>
+              <h1>Hello World Title Component</h1>
+              <span>conteúdo do span</span>
+            </div>
+          );
+        },
+      });
 
-        ReactDOM.render(
-            <Title />,
-            document.getElementById('app5')
-        );
+      ReactDOM.render(<Title />, document.getElementById("app5"));
     </script>
-
-</body>
-
+  </body>
 </html>
